TS-4263: Global key block configurable via Records.config